updated to tinygrid branding. Frontend looks good. Next backend

--- a/src/interfaces/coral_web/src/styles/fonts.css
+++ b/src/interfaces/coral_web/src/styles/fonts.css
@@ -15,9 +15,9 @@
 }
 
 @font-face {
-  font-family: 'Aliance No. 2';
-  src: url('../../public/fonts/AlianceNo2-Light.woff2') format("woff2"),
-  url('../../public/fonts/AlianceNo2-Light.woff') format("woff");
+  font-family: 'Aliance';
+  src: url('../../public/fonts/AlianceNo2-Light.woff') format("woff");
+  /* url('../../public/fonts/AlianceNo2-Light.woff') format("woff"); */
   font-weight: normal;
   font-style: normal;
 }
